# devin-vds-pdpliaison

./: README.md
.github/workflows/: rust-build.yml  rust-release.yml
dotnet-pdpliaison/: pdpLiaison.sln
dotnet-pdpliaison/AikDemo/: AikDemo.csproj  PdpConnectorFactory.Designer.cs  PdpConnectorFactory.cs  Program.cs  RequestFactory.Designer.cs  RequestFactory.cs  RequestFrm.Designer.cs  RequestFrm.cs  RequestFrm.resx  Results.Designer.cs  Results.cs
dotnet-pdpliaison/AikDemo/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
dotnet-pdpliaison/Dox/: Doxyfile
dotnet-pdpliaison/TestProject/: AttributeRepository.txt  Form1.Designer.cs  Form1.cs  Form1.resx  RequestGenerator.Designer.cs  RequestGenerator.cs  TestProject.csproj
dotnet-pdpliaison/TestProject/Properties/: AssemblyInfo.cs  (+2 more)
dotnet-pdpliaison/pdpLiaison/: Advice.cs  AnonymousConnector.cs  AttributeAssignment.cs  AuthorizationRequest.cs  AuthorizationResponse.cs  ClassDiagram1.cd  ClassDiagram2.cd  ClientSslConnector.cs  DistinguishedName.cs  MultiRequest.cs  MultiResponse.cs  Obligation.cs  ObligationAdvice.cs  PdpConnector.cs  PdpLiaison.csproj  PdpLiaison.nuspec  PublicTypes.cs  RequestBase.cs  WsseConnector.cs  XacmlAttribute.cs  XacmlCategory.cs  XacmlValue.cs  XmlSigningConnector.cs  pdpLiaison.snk
rust-pdpliaison/: Cargo.toml  Makefile  README.md  cross-build.sh  pdp_liaison.h
rust-pdpliaison/src/: connector.rs  constants.rs  error.rs  ffi.rs  json_builder.rs  lib.rs  request.rs  response.rs  types.rs  xml_builder.rs
rust-pdpliaison/tests/: integration_tests.rs
(+6 files in other folders)
