[package]
name = "pdp_liaison"
version = "0.1.0"
edition = "2021"
description = "XACML 3.0 PDP Liaison - a cross-language common library for communicating with a Policy Decision Point"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
# XML handling
quick-xml = { version = "0.31", features = ["serialize"] }

# JSON handling
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client
reqwest = { version = "0.11", features = ["blocking", "rustls-tls", "native-tls"], default-features = false }

# TLS / Certificates
native-tls = "0.2"
rustls = "0.22"
rustls-pemfile = "2"

# XML digital signatures
openssl = { version = "0.10", features = ["vendored"] }

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Date/time formatting
chrono = "0.4"

# Logging
log = "0.4"

# For C FFI string handling
libc = "0.2"

[dev-dependencies]
# For tests
tokio = { version = "1", features = ["full"] }
